<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/signup_3"
    tools:context=".Final_signup">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="60dp"
                android:fontFamily="@font/calibri"
                android:text="@string/signupsucc1"
                android:textColor="#A4C89C"
                android:textSize="40sp" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:fontFamily="@font/calibri"
                android:text="@string/signupsucc2"
                android:textColor="#A4C89C"
                android:textSize="40sp" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:fontFamily="@font/calibri"
                android:text="@string/signupsucc3"
                android:textColor="#A4C89C"
                android:textSize="40sp" />

            <Button
                android:id="@+id/btnvorod"
                android:layout_width="wrap_content"
                android:background="@drawable/back_finalsignup"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:fontFamily="@font/calibri"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="30sp"
                android:paddingLeft="50dp"
                android:paddingRight="50dp"
                android:layout_height="wrap_content"
                android:text="@string/vorod" />

            <ImageView
                android:id="@+id/imageView13"
                android:layout_width="209dp"
                android:layout_height="234dp"
                android:layout_gravity="center"
                android:layout_marginTop="60dp"
                app:srcCompat="@drawable/logo" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>