<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/log"
    android:orientation="vertical"
    tools:context=".SplashScreen">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="340dp"
                android:layout_height="279dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                app:srcCompat="@drawable/logo"
                android:contentDescription="TODO" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:fontFamily="@font/calibri"
                android:gravity="center"
                android:text="@string/appname"
                android:textColor="#03204A"
                android:textSize="38sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:fontFamily="@font/calibri"
                android:gravity="center"
                android:text="@string/text1"
                android:textColor="@color/green"
                android:textSize="30sp"
                android:textStyle="bold"
                android:translationY="16dp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:fontFamily="@font/calibri"
                android:gravity="center"
                android:text="@string/ready"
                android:textColor="#002847"
                android:textSize="30sp"
                android:textStyle="bold"
                android:translationY="20dp" />

            <Button
                android:id="@+id/btnnextpage"
                android:layout_width="183dp"
                android:layout_height="53dp"
                android:layout_gravity="bottom|center"
                android:layout_marginTop="60dp"
                android:background="@drawable/btn02"
                android:fontFamily="@font/calibri"
                android:gravity="center"
                android:paddingLeft="45dp"
                android:paddingRight="45dp"
                android:text="@string/next"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold" />
            <androidx.coordinatorlayout.widget.CoordinatorLayout
                android:layout_width="match_parent"
                android:foregroundGravity="center|bottom"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView12"
                    android:layout_marginTop="60dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:layout_gravity="center|bottom"
                    android:text="@string/version" />
            </androidx.coordinatorlayout.widget.CoordinatorLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
