<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/signup_1"
    tools:context=".First_signup">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="68dp"
                android:fontFamily="@font/lalezar"
                android:text="@string/sabtnam"
                android:textColor="#65ABDE"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/Name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="65dp"
                android:autofillHints=""
                android:background="@drawable/btngradi01"
                android:ems="10"
                android:fontFamily="@font/yekan"
                android:gravity="center"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:padding="12dp"
                android:textColor="@color/white"
                android:textColorHint="#65ABDE"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/Family"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:autofillHints=""
                android:background="@drawable/btngradi01"
                android:ems="10"
                android:fontFamily="@font/yekan"
                android:gravity="center"
                android:hint="@string/family"
                android:inputType="textPersonName"
                android:padding="12dp"
                android:textColor="@color/white"
                android:textColorHint="#65ABDE"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/Username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:autofillHints=""
                android:background="@drawable/btngradi01"
                android:ems="10"
                android:fontFamily="@font/yekan"
                android:gravity="center"
                android:hint="@string/username"
                android:inputType="textPersonName"
                android:padding="12dp"
                android:textColor="@color/white"
                android:textColorHint="#65ABDE"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/Password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:autofillHints=""
                android:background="@drawable/btngradi01"
                android:ems="10"
                android:fontFamily="@font/yekan"
                android:gravity="center"
                android:hint="@string/pass"
                android:inputType="textPassword"
                android:padding="12dp"
                android:textColor="@color/white"
                android:textColorHint="#65ABDE"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnsabt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:background="@drawable/btngradi01"
                android:fontFamily="@font/yekan"
                android:gravity="center"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:paddingRight="20dp"
                android:paddingBottom="10dp"
                android:text="ثبت اطلاعات"
                android:textColor="#4CAF50"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="164dp"
                android:layout_height="139dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                app:srcCompat="@drawable/logo" />

            <androidx.coordinatorlayout.widget.CoordinatorLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/goback"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|left"
                    android:layout_margin="5dp"
                    android:contentDescription="@string/lastpage"
                    android:src="@drawable/leftblu"
                    app:backgroundTint="#68ABDF"
                    app:fabSize="auto"
                    app:rippleColor="#012D66" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/gonext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|right"
                    android:layout_margin="5dp"
                    android:contentDescription="@string/nextpage"
                    android:src="@drawable/rightblu"
                    app:backgroundTint="#68ABDF"
                    app:fabSize="auto"
                    app:rippleColor="#012D66" />
            </androidx.coordinatorlayout.widget.CoordinatorLayout>

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>