<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backg"
    android:orientation="vertical"
    tools:context=".HelpTicket">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.airbnb.lottie.LottieAnimationView
                android:layout_width="261dp"
                android:layout_height="245dp"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                app:lottie_autoPlay="true"
                app:lottie_fileName="ticket.json"
                app:lottie_loop="true" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:fontFamily="@font/calibri"
                android:gravity="center"
                android:text="@string/buyticket"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="match_parent"
                android:layout_height="245dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                app:srcCompat="@drawable/text01" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="164dp"
                android:layout_height="139dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/logo" />

            <androidx.coordinatorlayout.widget.CoordinatorLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_next"
                    android:layout_margin="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|right"
                    android:background="@drawable/btn01"
                    android:text="@string/front"
                    android:textStyle="bold" />

                <Button
                    android:layout_margin="10dp"
                    android:id="@+id/btn_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|left"
                    android:background="@drawable/btn01"
                    android:text="@string/back"
                    android:textStyle="bold" />
            </androidx.coordinatorlayout.widget.CoordinatorLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>